@@ -1,8 +1,11 @@
 use strict;
 use warnings;
-use Test::More tests => 2;
+use Test::More;
 
 use B::Hooks::EndOfScope;
+
+plan skip_all => 'Skiping XS test in PP mode'
+  unless $INC{'B/Hooks/EndOfScope/XS.pm'};
 
 eval q[
     sub foo {
@@ -13,4 +16,7 @@ eval q[
 ];
 
 like($@, qr/^bar/);
+
 pass('no segfault');
+
+done_testing;
